Fix align bugs
Align center for all and left for char container

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -7,12 +7,15 @@ body{
     padding: 0;
     display: flex;
     flex-direction: column;
-    text-align: left;
+    text-align: center;
     background-color: rgb(3, 1, 22);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: aliceblue;
 }
 #chat-container{
+    text-align: left;
+    margin-left: 10%;
+    margin-right: 5%;
     margin-bottom: 40px;
 }
 #chatForm{
